tests/errors/compiler/call_not_from_function/call_array.c
int main()
{
	int arr[2] = {1,2};
	//int not_arr = 10;
	//float a = 1.0;
	int b = 1;
	arr(b);
	//printf("%i", not_arr[b]);	
	return 0;
}